<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/fund_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/fund_name_hint"
        android:inputType="textAutoComplete"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/fund_company_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/fund_company_hint"
        android:inputType="textAutoComplete"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/fund_value_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/value_hint"
        android:inputType="numberDecimal"
        android:textSize="14sp"/>

</LinearLayout>