<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    >

    <EditText
        android:id="@+id/asset_new_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/asset_name_hint"
        android:textSize="14sp"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/asset_new_type_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"

        android:hint="@string/asset_type_hint"
        android:inputType="textAutoComplete" />

    <EditText
        android:id="@+id/asset_new_value_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        android:hint="@string/value_hint"
        android:inputType="numberDecimal" />

</LinearLayout>